fixed "x" button z-index

--- a/style.css
+++ b/style.css
@@ -327,6 +327,7 @@
 	height: 25px;
 	width: 25px;
 	padding: 0px;
+    z-index: 3;
 }
 
 .none-btn {
